# FireRedASR

./: MANIFEST.in  README.md  pyproject.toml  setup.py
fireredasr/: __init__.py  speech2text.py
fireredasr/data/: __init__.py
fireredasr/models/: __init__.py
fireredasr/models/module/: __init__.py
fireredasr/tokenizer/: __init__.py
fireredasr/utils/: __init__.py
